# multisig-ledger-app

./: .gitignore  CLAUDE.md  Cargo.toml  build.rs  ledger_app.toml
.cargo/: config.toml
.github/workflows/: build_and_functional_tests.yml  guidelines_enforcer.yml  native_tests.yml
docs/: audit-checklist.md  derivation-path-rationale.md
scripts/: build.sh  test.sh
src/: main.rs  sanitize.rs  settings.rs
src/app_ui/: menu.rs
src/crypto/: mod.rs
src/display/: address.rs  amount.rs  config_review.rs  mod.rs  review.rs  streaming_review.rs
src/handlers/: get_public_key.rs  get_version.rs  sign_tx.rs
src/parser/: config_tx.rs  mod.rs  solana_message.rs  squads.rs  vault_tx.rs
src/parser/inner/: mod.rs  programs.rs  spl_token.rs  system.rs
tests/native/: Cargo.toml
tests/native/squads-native-tests/tests/: parser_test.rs  parser_test_base58.rs
tests/standalone/: conftest.py  requirements.txt  test_get_pubkey.py  test_sign_tx.py  test_version.py
